--- a/axelor-front/src/views/kanban/kanban.module.scss
+++ b/axelor-front/src/views/kanban/kanban.module.scss
@@ -7,24 +7,23 @@
 }
 
 .board {
-  background-color: var(--bs-white);
   padding: 0.5rem;
 }
 
 .kanban-card {
   list-style: none;
   position: relative;
-  background: #fafafb;
-  border: 1px solid var(--bs-gray-200);
+  border: 1px solid var(--bs-border-color);
   margin-bottom: 0.75rem;
   padding: 0.625rem;
   border-radius: 2px;
   box-sizing: content-box;
-  border-left: 3px solid var(--bs-gray-200);
+  border-left: 3px solid var(--bs-border-color);
   user-select: none;
+  background-color: var(--bs-tertiary-bg);
   &:hover {
     cursor: pointer;
-    background-color: var(--bs-white);
+    background-color: var(--bs-secondary-bg);
   }
 }
 
